--- a/kadai_018/style.css
+++ b/kadai_018/style.css
@@ -2,9 +2,7 @@
   display: inline-block;
   width: 800px;
   background-color: #dcc9f4;
-  margin: 20px,20px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 20px auto;
   text-align: center;
 
 }
@@ -19,7 +17,7 @@
 #middle {
   width: 800px;
   height: 800px;
-  margin: 20px,20px;
+  margin: 20px auto;
   background-color: #ffd9df;
   position: relative;
 
@@ -58,6 +56,7 @@
   width: 800px;
   height: 300px;
   background-color:#87ceeb;
+  margin: auto;
 
 }
 
