--- a/kadai_022/style.css
+++ b/kadai_022/style.css
@@ -42,7 +42,7 @@ h2::before {
   color: rgb(239, 111, 139);
 }
 
-#parent :nth-of-type(2)::first-letter {
+.contents p:nth-of-type(2)::first-letter {
     font-weight: bold;
     color: rgb(97, 206, 249);
 }
